--- a/html/index.html
+++ b/html/index.html
@@ -10,8 +10,10 @@
 
 <body>
   <div id="app"></div>
-  <button hx-get="/clicked" hx-swap="outerHTML">
-    Click Me
+  <button class="foo-button mdc-button mdc-button--raised" hx-get="/clicked" hx-swap="innerHTML" hx-target="#foo-label">
+    <span class="mdc-button__ripple"></span>
+    <span class="mdc-button__focus-ring"></span>
+    <span class="mdc-button__label" id="foo-label">Click me</span>
   </button>
   <script type="module" src="/main.js"></script>
 </body>
