--- a/html/index.html
+++ b/html/index.html
@@ -13,6 +13,7 @@
   <button class="foo-button mdc-button mdc-button--raised" hx-get="/clicked" hx-swap="innerHTML" hx-target="#foo-label">
     <span class="mdc-button__ripple"></span>
     <span class="mdc-button__focus-ring"></span>
+    <i class="material-icons mdc-button__icon" aria-hidden="true">bookmark</i>
     <span class="mdc-button__label" id="foo-label">Click me</span>
   </button>
   <script type="module" src="/main.js"></script>
