--- a/html/index.html
+++ b/html/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <div id="app" hx-get="/app" hx-trigger="load"></div>
+  <div id="app" hx-get="/app" hx-trigger="load delay:100ms"></div>
   <script type="module" src="/main.js"></script>
 </body>
 
