--- a/vite/index.html
+++ b/vite/index.html
@@ -9,7 +9,18 @@
 </head>
 
 <body>
-  <div id="app" hx-get="/app" hx-trigger="load delay:100ms"></div>
+  <!-- https://icons8.com/cssload/en/horizontal-bars -->
+  <div id="fountainG" class="htmx-indicator">
+    <div id="fountainG_1" class="fountainG"></div>
+    <div id="fountainG_2" class="fountainG"></div>
+    <div id="fountainG_3" class="fountainG"></div>
+    <div id="fountainG_4" class="fountainG"></div>
+    <div id="fountainG_5" class="fountainG"></div>
+    <div id="fountainG_6" class="fountainG"></div>
+    <div id="fountainG_7" class="fountainG"></div>
+    <div id="fountainG_8" class="fountainG"></div>
+  </div>
+  <div id="app" hx-get="/app" hx-trigger="load delay:100ms" hx-indicator=".htmx-indicator"></div>
   <script type="module" src="/main.js"></script>
 </body>
 
