--- a/vite/index.html
+++ b/vite/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="favicon.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="htmx-config" content='{ "withCredentials": true }'>
   <title>fastify-htmxample</title>
 </head>
 
