--- a/vite/index.html
+++ b/vite/index.html
@@ -21,7 +21,9 @@
     <div id="fountainG_7" class="fountainG"></div>
     <div id="fountainG_8" class="fountainG"></div>
   </div>
-  <div id="app" hx-get="/app" hx-trigger="init" hx-indicator=".htmx-indicator"></div>
+  <div id="app" hx-indicator=".htmx-indicator">
+block app
+  </div>
   <script type="module" src="/main.js"></script>
 </body>
 
