--- a/vite/index.html
+++ b/vite/index.html
@@ -21,9 +21,7 @@
     <div id="fountainG_7" class="fountainG"></div>
     <div id="fountainG_8" class="fountainG"></div>
   </div>
-  <div id="app" hx-indicator=".htmx-indicator">
-block app
-  </div>
+  <div id="app" hx-indicator=".htmx-indicator"></div>
   <script type="module" src="/main.js"></script>
 </body>
 
